fix: fine-tune card and button figma alignment

--- a/src/components/reusable/button/button.scss
+++ b/src/components/reusable/button/button.scss
@@ -211,7 +211,7 @@
   &--primary-ai,
   &--secondary-ai {
     background-color: var(--kd-color-background-button-primary-ai-default);
-    color: var(--kd-color-text-button-light-primary);
+    color: var(--kd-color-text-button-ai-default);
 
     &:not([disabled]) {
       @include gradient.border-gradient-ai(
